Commit del parcial 1 parte 2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
           </div>
           <div class="col d-flex justify-content-end">
             <a href="#" id="carItems"
-              ><img src=" " alt="carro de compras" id="CarritoCompras"
+              ><img
+                src="./img/CarroCompras.png"
+                alt="carro de compras"
+                id="CarritoCompras"
             /></a>
             <span id="itemsAdd" class="mt-3">0 items</span>
           </div>
@@ -30,28 +33,100 @@
       </div>
     </header>
     <hr />
+    <div>
+      <div id="bannerRestaurant">
+        <img
+          src="./img/BurgerBanner.png"
+          alt="Burger Banner"
+          id="BannerBurger"
+        />
+      </div>
+    </div>
+    <hr />
     <nav
       class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-dark bg-dark"
       id="navbarConfig"
     >
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto" id="categories">
-          <!-- Add the categories -->
-        </ul>
+      <button
+        class="btn d-md-none"
+        type="button"
+        data-toggle="collapse"
+        data-target="#example-collapse"
+        aria-expanded="false"
+        aria-controls="collapseExample"
+      >
+        <span class="navbar-light"
+          ><span class="navbar-toggler-icon"></span
+        ></span>
+      </button>
+
+      <div id="example-collapse" class="collapse d-md-block">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto" id="listCategories"></ul>
+        </div>
       </div>
     </nav>
     <hr />
-    <h2 class="text-center" id="titleCategory">
-      <!-- Title Category -->&nbsp;
-    </h2>
+    <h2 class="text-center" id="titleCategory">&nbsp;</h2>
     <hr />
     <div>
       <div class="container-fluid" id="containerCards">
-        <div class="row d-flex" id="products">
-          <!-- Add products -->
+        <div class="row d-flex justify-content-around" id="products"></div>
+      </div>
+    </div>
+    <div>
+      <div id="tableItems"></div>
+      <div id="optionsItems"></div>
+    </div>
+    <div
+      class="modal fade"
+      id="cancelModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Cancel the order</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">Are you sure about cancelling the order?</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-light btn-border"
+              data-dismiss="modal"
+              id="buttonYes"
+            >
+              Yes, I want to cancel the order
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger btn-border"
+              data-dismiss="modal"
+            >
+              No, I want to continue adding products
+            </button>
+          </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="text-center mt-2 mb-3">
+        <span id="footerText"
+          >Contact us: +57 3102105253 - info@restaurant.com - @restaurant</span
+        >
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -67,7 +142,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <!-- Main JS -->
     <script src="main.js"></script>
   </body>
 </html>
